objects/copado__Installed_Artifact_Version__c.object
<CustomObject>
    <description>Provide visibility of which package versions are installed in any given environment.</description>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Installed Package Versions</relationshipLabel>
        <relationshipName>Installed_Package_Versions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Package_Version__c</fullName>
        <label>Package Version</label>
        <referenceTo>copado__Artifact_Version__c</referenceTo>
        <relationshipLabel>Installed Package Versions</relationshipLabel>
        <relationshipName>Installed_Package_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Upgraded</fullName>
                </value>
                <value>
                    <fullName>Uninstalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Installed Package Version</label>
    <nameField>
        <displayFormat>IPV-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installed Package Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>